# sonicThang

./: CMakeLists.txt  README.md  export_presets.cfg  make.sh  project.godot  sonicThang.sln
.import/: ball_1.png-51c4c7d5f9018470135da8d3c80c3276.md5  ball_1.png-51c4c7d5f9018470135da8d3c80c3276.stex  ball_3.png-7052f238ed5750869a48b414030f1936.md5  ball_3.png-7052f238ed5750869a48b414030f1936.stex  ball_4.png-e82abec63b4ed2868fc0120a5235114d.md5  ball_4.png-e82abec63b4ed2868fc0120a5235114d.stex  ball_5.png-80d743b61a30fdf1ccb69001ec19001e.md5  ball_5.png-80d743b61a30fdf1ccb69001ec19001e.stex  ball_6.png-68523df5aab51bed0c6c51cad92dfec1.md5  ball_6.png-68523df5aab51bed0c6c51cad92dfec1.stex  ball_7.png-542509ed6db5dd1dc20b5bdff496d76b.md5  ball_7.png-542509ed6db5dd1dc20b5bdff496d76b.stex
.mono/assemblies/Debug/: api_hash_cache.cfg
.mono/assemblies/Release/: api_hash_cache.cfg
.mono/metadata/: ide_messaging_meta.txt  scripts_metadata.debug  scripts_metadata.editor
Assets/img/Player/: ball_1.png.import  ball_3.png.import  ball_4.png.import  ball_5.png.import  ball_6.png.import  ball_7.png.import
Scenes/: Player.tscn  World.tscn
Scripts/: Player.cs
include/: defs.h  input.hpp  obs.hpp  plat.hpp  player.hpp  render.hpp  vec2.hpp
src/: input.cpp  main.cpp  obs.cpp  plat.cpp  player.cpp  render.cpp  vec2.cpp
